--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.2.1",
     "http-proxy-middleware": "^0.19.1",
     "lodash": "^4.17.11",
+    "prop-types": "^15.7.1",
     "react": "^16.8.1",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.4",
     "tabletojson": "^1.0.4"
